# oceanspy

./: #.travis.yml#  .codecov.yml  .coveragerc  .gitignore  .nfs0000000b019d9d0300000091  .pep8speaks.yml  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CITATION.cff  CODEOWNERS  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  Untitled.ipynb  conftest.py  pyproject.toml  pytest.ini  readthedocs.yml  report.html  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: cancel.yaml  ci.yaml  pre-commit.yaml  pypi.yml
binder/: IDIES_symposium (1).ipynb  IDIES_symposium.ipynb  Live_Demo.ipynb  Tutorial.ipynb  environment.yml  postBuild
binder/.binder/: environment.yml
ci/: environment-py27.yml  environment-py35.yml  environment-py36.py  environment-py36.yml  environment-py37.yml  environment-py38.yml  environment-py39.yml  environment.yml
cov_html/: index.html  oceanspy__oceandataset_py.html  oceanspy__ospy_utils_py.html  oceanspy_animate_py.html  oceanspy_compute_py.html  oceanspy_open_oceandataset_py.html  oceanspy_plot_py.html  oceanspy_subsample_py.html  oceanspy_utils_py.html  status.json
docs/: .environment.yml.swp  .nfs00000013009873c400000049  .nfs00000013009873d40000004a  Demo1_OceanDataset.ipynb  Demo2_Subsample.ipynb  Demo3a_Compute.ipynb  Demo3b_ComputeHS.ipynb  Demo3c_ComputeVS.ipynb  Demo4_Plots.ipynb  Kogur.ipynb  Makefile  Particles.ipynb  Statistics.ipynb  Tutorial.ipynb  Tutorial_OceanDataset.ipynb  Tutorial_Subsample.ipynb  Tutorial_subsample.ipynb  Tutorials.ipynb  api.rst  conf.py  datasets.rst  environment.yml  flowchart.rst  index.rst  installation.rst  make.bat  people.rst  quick.rst  sciserver.rst  tutorial.ipynb  usage.rst
docs/_templates/: layout.html  people.html
flake-report/: eggs.pytest_runner-4.4-py3.7.egg.ptr.report.html  eggs.pytest_runner-4.4-py3.7.egg.ptr.source.html  index.html  setup.report.html  setup.source.html  styles.css
oceanspy/: LLC_rearrange.py  MANIFEST.in  Untitled.ipynb  __init__.py  _autogenerate.py  _cutout.py  _oceandataset-Copy1.py  _oceandataset.py  _ospy_utils.py  _useful_funcs.py  animate.py  autogenerate.py  catalog_xarray.yaml  catalog_xmitgcm.yaml  compute.py  llc_rearrange.py  oceanspy.py  open_dataset.py  open_oceandataset.py  plot.py  sample.py  subsample.py  useful_funcs.py  utils.py  visualize.py
oceanspy_get_started/: .zattrs
paper/: README  paper.bib  paper.md
sciserver_catalogs/: catalog_hycom.yaml  catalog_llc4320.yaml  catalog_xarray.yaml  catalog_xmitgcm.yaml  datasets_list.yaml  environment.yml
test_path/: .zattrs
tests/: test_oceanspy.py
(+580 files in other folders)
