[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "oceanspy"
description = "A Python package to facilitate ocean model data analysis and visualization."
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering"
]
dynamic = ["version"]
dependencies = [
    "dask",
    "xarray >= 0.14.1",
    "xgcm >= 0.2.0"
    ]
requires-python = ">=3.9"

[tool.coverage.run]
branch = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["oceanspy/tests"]
addopts = "-v --cov"

[tool.setuptools]
packages = ["oceanspy"]

[tool.setuptools_scm]
write_to = "oceanspy/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
