[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "dask",
  "xarray >= 2024.7.0",
  "xgcm >= 0.2.0",
  "shapely"
]
description = "A Python package to facilitate ocean model data analysis and visualization."
dynamic = ["version"]
license = {file = "LICENSE"}
name = "oceanspy"
readme = "README.rst"
requires-python = ">=3.10"

[tool.coverage.run]
branch = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-v --cov"
filterwarnings = [
  "ignore:.*:DeprecationWarning",
  "ignore:.*blockwise.*:UserWarning",
  "ignore:.*:FutureWarning",
  "ignore:.*yaml.load().*",
  "ignore:.*Adding.*",
  "ignore:.*Tight layout not applied.*:UserWarning"
]
testpaths = ["oceanspy/tests"]

[tool.setuptools]
packages = ["oceanspy"]

[tool.setuptools_scm]
write_to = "oceanspy/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
